Fix flex-wrap prop

--- a/css/index.css
+++ b/css/index.css
@@ -150,7 +150,7 @@ header {
   border: 2px solid rgb(211, 211, 211);
   border-radius: 25px;
   display: flex;
-  flex-wrap: none;
+  flex-wrap: nowrap; 
   margin: 0.75rem 0;
   padding: 0.25em 0.5em;
   width: 175px;
